k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: art-app
  template:
    metadata:
      labels:
        app: art-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: site-content
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: site-content
          hostPath:
            path: /home/ronin/projects/art-app/k8s/site
            type: DirectoryOrCreate
        - name: nginx-config
          configMap:
            name: nginx-config
