k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: art-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - art-app.kenshin.local
      secretName: kenshin-wildcard-tls
  rules:
    - host: art-app.kenshin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: art-app
                port:
                  number: 80
